--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,8 +37,13 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="filtres">
+			<button class="filtres__boutons">Tous</button>
+			<button class="filtres__boutons">Objets</button>
+			<button class="filtres__boutons">Appartements</button>
+			<button class="filtres__boutons">Hôtels & Restaurants</button>
+		</div>
 		<div class="gallery">
-
 		</div>
 	</section>
 	<section id="contact">
