Intégration page login ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,14 +11,14 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./assets/scripts/scripts.js" defer></script>
 </head>
-<body>
+<body class="index__body">
 <header>
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li><a href="#portfolio">projets</a></li>
+			<li><a href="#contact">contact</a></li>
+			<li><a href="assets/login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
