--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -8,36 +8,34 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="style.css">
 	<script type="module" src="scripts/scripts.js" defer></script>
 </head>
-<body>
+<body class="login__body">
 <header>
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="/FrontEnd/index.html#portfolio">projets</a></li>
+			<li><a href="/FrontEnd/index.html#contact">contact</a></li>
+			<li class="login__onpage">login</li>
+			<li><img src="icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
-	<section id="contact">
+	<section id="login">
 		<h2>Log In</h2>
 		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
+			<label for="pwd">Mot de passe</label>
+			<input type="password" id="pwd" name="pwd"> 
+			<input type="submit" value="Se connecter">
 		</form>
 	</section>
 </main>
-<footer>
+<footer class="login__footer">
 	<nav>
 		<ul>
 			<li>Mentions Légales</li>
