filtres complètement refaits proprement

--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -14,13 +14,13 @@
 </head>
 <body class="login__body">
 <header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+	<h1>Sophie Bluel <span>ARCHITECTE D'INTÉRIEUR</span></h1>
 	<nav>
 		<ul>
 			<li><a href="/FrontEnd/index.html#portfolio">projets</a></li>
 			<li><a href="/FrontEnd/index.html#contact">contact</a></li>
 			<li class="login__onpage">login</li>
-			<li><img src="icons/instagram.png" alt="Instagram"></li>
+			<li><img class="insta" src="icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
@@ -33,13 +33,14 @@
 			<label for="pwd">Mot de passe</label>
 			<input type="password" id="password" name="password"> 
 			<input type="submit" value="Se connecter">
+			<button class="recover-password">Mot de passe oublié</button>
 		</form>
 	</section>
 </main>
 <footer class="login__footer">
 	<nav>
 		<ul>
-			<li>Mentions Légales</li>
+			<li>Mentions légales</li>
 		</ul>
 	</nav>
 </footer>
