--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,18 +8,28 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="assets/scripts/scripts.js" defer></script>
 </head>
 <body class="index__body">
+<div class="mode-edition">
+	<button class="mode-edition__bouton1">
+		<i class="fa-regular fa-pen-to-square"></i>
+		<p>Mode édition</p>
+	</button>
+	<button class="mode-edition__bouton2">publier les changements</button>
+</div>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+	<h1>Sophie Bluel <span>ARCHITECTE D'INTÉRIEUR</span></h1>
 	<nav>
 		<ul>
 			<li><a href="#portfolio">projets</a></li>
 			<li><a href="#contact">contact</a></li>
 			<li><a href="assets/login.html">login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><img class="insta" src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
@@ -27,6 +37,10 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
+			<button class="bouton-modifier">
+				<i class="fa-regular fa-pen-to-square"></i>
+				<p>Modifier</p>
+			</button>
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
@@ -37,14 +51,8 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
-		<div class="filtres">
-			<button class="filtres__boutons">Tous</button>
-			<button class="filtres__boutons">Objets</button>
-			<button class="filtres__boutons">Appartements</button>
-			<button class="filtres__boutons">Hôtels & Restaurants</button>
-		</div>
-		<div class="gallery">
-		</div>
+		<div class="filtres"></div>
+		<div class="gallery"></div>
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
@@ -64,7 +72,7 @@
 <footer>
 	<nav>
 		<ul>
-			<li>Mentions Légales</li>
+			<li>Mentions légales</li>
 		</ul>
 	</nav>
 </footer>
