--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -9,8 +9,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="style.css">
-	<script src="scripts/scripts.js" defer></script>
-	<script src="scripts/scriptslogin.js" defer></script>
+	<script src="scripts/filtres.js" defer></script>
+	<script src="scripts/login.js" defer></script>
 </head>
 <body class="login__body">
 <header>
