Page d'accueil admin ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,8 +12,8 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="assets/scripts/filtres.js" defer></script>
-	<script src="scripts/login.js" defer></script>
+	<script src="./assets/scripts/filtres.js" type="text/javascript" defer></script>
+	<script src="./assets/scripts/login.js" type="text/javascript" defer></script>
 </head>
 <body class="index__body">
 <div class="mode-edition">
@@ -29,7 +29,7 @@
 		<ul>
 			<li><a href="#portfolio">projets</a></li>
 			<li><a href="#contact">contact</a></li>
-			<li><a href="assets/login.html">login</a></li>
+			<li><a class="login__lien" href="assets/login.html">login</a></li>
 			<li><img class="insta" src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
