Squelette base modal html/css ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -35,6 +35,21 @@
 	</nav>
 </header>
 <main>
+	<aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titre-modal">
+		<div class="modal-wrapper">
+			<div class="icones-modal">
+				<button class="retour"><i class="fa-solid fa-arrow-left fa-xl"></i></button>
+				<button class="fermer"><i class="fa-solid fa-xmark fa-lg"></i></button>
+			</div>
+			<h1 class="titre-modal">Galerie photo</h1>
+			<div class="contenu-modal">
+				<div class="contenu-flexible-modal"></div>
+				<div class="barre-modal"></div>
+				<button class="bouton-modal filtres__boutons filtres__boutons--select">Ajouter une photo</button>
+				<button class="supprimer-modal">Supprimer la galerie</button>
+			</div>
+		</div>
+	</aside>
 	<section id="introduction">
 		<figure class="photo">
 			<img src="./assets/images/sophie-bluel.png" alt="">
