CSS galerie modal ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./assets/scripts/filtres.js" type="text/javascript" defer></script>
 	<script src="./assets/scripts/login.js" type="text/javascript" defer></script>
+	<script src="./assets/scripts/modal.js" type="text/javascript" defer></script>
 </head>
 <body class="index__body">
 <div class="mode-edition">
@@ -43,7 +44,9 @@
 			</div>
 			<h1 class="titre-modal">Galerie photo</h1>
 			<div class="contenu-modal">
-				<div class="contenu-flexible-modal"></div>
+				<div class="contenu-flexible-modal">
+					
+				</div>
 				<div class="barre-modal"></div>
 				<button class="bouton-modal filtres__boutons filtres__boutons--select">Ajouter une photo</button>
 				<button class="supprimer-modal">Supprimer la galerie</button>
