CSS modal ajout photo version 1 ok

--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -32,7 +32,7 @@
 			<input type="email" name="E-mail" id="email">
 			<label for="pwd">Mot de passe</label>
 			<input type="password" id="password" name="password"> 
-			<input type="submit" value="Se connecter">
+			<input type="submit" value="Se connecter" class="submit">
 			<button class="recover-password">Mot de passe oublié</button>
 		</form>
 	</section>
