--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -43,14 +43,6 @@
 				<button class="fermer"><i class="fa-solid fa-xmark fa-lg"></i></button>
 			</div>
 			<h1 class="titre-modal">Galerie photo</h1>
-			<div class="contenu-modal">
-				<div class="contenu-flexible-modal">
-					
-				</div>
-				<div class="barre-modal"></div>
-				<button class="bouton-modal filtres__boutons filtres__boutons--select">Ajouter une photo</button>
-				<button class="supprimer-modal">Supprimer la galerie</button>
-			</div>
 		</div>
 	</aside>
 	<section id="introduction">
@@ -89,7 +81,7 @@
 			<input type="email" name="email" id="email">
 			<label for="message">Message</label>
 			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
+			<input type="submit" value="Envoyer" class="submit">
 		</form>
 	</section>
 </main>
