ouverture/fermeture boîte modale ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,10 +18,10 @@
 </head>
 <body class="index__body">
 <div class="mode-edition">
-	<button class="mode-edition__bouton1">
+	<a href="#modal1" class="mode-edition__bouton1 js-modal">
 		<i class="fa-regular fa-pen-to-square"></i>
 		<p>Mode édition</p>
-	</button>
+	</a>
 	<button class="mode-edition__bouton2">publier les changements</button>
 </div>
 <header>
@@ -43,6 +43,7 @@
 				<button class="fermer"><i class="fa-solid fa-xmark fa-lg"></i></button>
 			</div>
 			<h1 class="titre-modal">Galerie photo</h1>
+			<div class="contenu-modal"></div>
 		</div>
 	</aside>
 	<section id="introduction">
@@ -63,10 +64,10 @@
 	<section id="portfolio">
 		<div class="title">
 			<h2>Mes Projets</h2>
-			<button class="bouton-modifier bm2">
+			<a href="#modal1" class="bouton-modifier bm2 js-modal">
 				<i class="fa-regular fa-pen-to-square"></i>
 				<p>Modifier</p>
-			</button>
+			</a>
 		</div>
 		<div class="filtres"></div>
 		<div class="gallery"></div>
