catégories générées dans les options ok - modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,10 +41,8 @@
 				<button class="icones-top-modal retour"><i class="fa-solid fa-arrow-left fa-xl"></i></button>
 				<button class="icones-top-modal fermer"><i class="fa-solid fa-xmark fa-lg"></i></button>
 			</div>
-			<h1 class="titre-modal">Galerie photo</h1>
-			<div class="contenu-modal">
-			
-			</div>
+			<h1 class="titre-modal"></h1>
+			<div class="contenu-modal"></div>
 		</div>
 	</aside>
 	<section id="introduction">
