Suppression des travaux sans rechargement ok

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,10 +17,10 @@
 </head>
 <body class="index__body">
 <div class="mode-edition">
-	<a href="#modal1" class="mode-edition__bouton1 js-modal">
+	<button class="mode-edition__bouton1">
 		<i class="fa-regular fa-pen-to-square"></i>
 		<p>Mode édition</p>
-	</a>
+	</button>
 	<button class="mode-edition__bouton2">publier les changements</button>
 </div>
 <header>
@@ -63,10 +63,10 @@
 	<section id="portfolio">
 		<div class="title">
 			<h2>Mes Projets</h2>
-			<a href="#modal1" class="bouton-modifier bm2 js-modal">
+			<button class="bouton-modifier bm2 js-modal">
 				<i class="fa-regular fa-pen-to-square"></i>
 				<p>Modifier</p>
-			</a>
+			</button>
 		</div>
 		<div class="filtres"></div>
 		<div class="gallery"></div>
